updated app name in 2 elements

--- a/cw-app-data.json
+++ b/cw-app-data.json
@@ -28,7 +28,7 @@
         {
             "start_date": "2022-10-14 00:00:00",
             "expiration_date": "",
-            "title": "Share Wanted! App",
+            "title": "Share Congress Watcher App",
             "message": "Get support credits when you share Wanted! App with friends, family & colleagues.",
             "priority": 3,
             "user_levels": [
@@ -96,7 +96,7 @@
         {
             "start_date": "2022-10-14 00:00:00",
             "expiration_date": "",
-            "title": "Enjoying Wanted! App?",
+            "title": "Enjoying Congress Watcher App?",
             "message": "Let us know how we're doing, and if there is something we can improve on. Tap here to give us a rating!",
             "priority": 4,
             "user_levels": [
