typo fix in cw-app

--- a/cw-app-data.json
+++ b/cw-app-data.json
@@ -29,7 +29,7 @@
             "start_date": "2022-10-14 00:00:00",
             "expiration_date": "",
             "title": "Share Congress Watcher App",
-            "message": "Get support credits when you share Wanted! App with friends, family & colleagues.",
+            "message": "Get support credits when you share the Congress Watcher App with friends, family & colleagues.",
             "priority": 3,
             "user_levels": [
                 "developer",
