--- a/wanted-app-data.json
+++ b/wanted-app-data.json
@@ -59,6 +59,9 @@
                 "legacy",
                 "free"
             ],
+            "application": [
+                "congress_watcher"
+            ],
             "market": [
                 "world"
             ],
