--- a/cw-app-data.json
+++ b/cw-app-data.json
@@ -4,9 +4,9 @@
     "notifications": [
         {
             "start_date": "2023-01-08 00:00:00",
-            "expiration_date": "2023-01-15 00:00:00",
-            "title": "Congress In Transition",
-            "message": "Due to the Congressional transition from the 117th to 118th Congress. Some areas of the app may take some time to update or begin showing data. As new sessions begin, all areas will return.",
+            "expiration_date": "",
+            "title": "App Update Required",
+            "message": "Your copy of the Congress Watcher App requires an update! Make sure to update to the latest version to stay up to date.",
             "priority": 0,
             "user_levels": [
                 "developer",
@@ -17,254 +17,13 @@
             "market": [
                 "world"
             ],
-            "url": "",
+            "url": "https://play.google.com/store/apps/details?id=com.watchtower.usa",
             "icon": "",
-            "support_option": false,
+            "support_option": true,
             "loading_screen": true,
-            "local_notification": false,
+            "local_notification": true,
             "is_alert": true,
             "additional_data": "alert"
-        },
-        {
-            "start_date": "2022-10-14 00:00:00",
-            "expiration_date": "",
-            "title": "Share Congress Watcher App",
-            "message": "Get support credits when you share the Congress Watcher App with friends, family & colleagues.",
-            "priority": 3,
-            "user_levels": [
-                "developer",
-                "premium",
-                "legacy",
-                "free"
-            ],
-            "market": [
-                "world"
-            ],
-            "url": "",
-            "icon": "handshake",
-            "support_option": true,
-            "loading_screen": true,
-            "local_notification": true,
-            "is_alert": false,
-            "additional_data": "share"
-        },
-        {
-            "start_date": "2022-11-10 00:00:00",
-            "expiration_date": "",
-            "title": "More Points, More Privilege!",
-            "message": "The more you use the app, the fewer ads you will see!",
-            "priority": 3,
-            "user_levels": [
-                "developer",
-                "legacy",
-                "free"
-            ],
-            "application": [
-                "congress_watcher"
-            ],
-            "market": [
-                "world"
-            ],
-            "url": "",
-            "icon": "",
-            "support_option": false,
-            "loading_screen": true,
-            "local_notification": true,
-            "is_alert": false,
-            "additional_data": "usage"
-        },
-        {
-            "start_date": "2022-10-14 00:00:00",
-            "expiration_date": "",
-            "title": "Purchase App Credits",
-            "message": "Use your app credits to buy cool in-app merchandise.",
-            "priority": 4,
-            "user_levels": [
-                "developer",
-                "premium",
-                "legacy",
-                "free"
-            ],
-            "application": [
-                "congress_watcher"
-            ],
-            "market": [
-                "usa"
-            ],
-            "url": "",
-            "icon": "coins",
-            "support_option": true,
-            "loading_screen": true,
-            "local_notification": false,
-            "is_alert": false,
-            "additional_data": "credits"
-        },
-        {
-            "start_date": "2022-11-25 00:00:00",
-            "expiration_date": "",
-            "title": "More Activity, More Credits",
-            "message": "App purchased credits are permanent. App usage credits decrease over time while not using the app. More activity, more credits!",
-            "priority": 4,
-            "user_levels": [
-                "developer",
-                "premium",
-                "legacy",
-                "free"
-            ],
-            "application": [
-                "congress_watcher"
-            ],
-            "market": [
-                "world"
-            ],
-            "url": "",
-            "icon": "coins",
-            "support_option": false,
-            "loading_screen": true,
-            "local_notification": false,
-            "is_alert": false,
-            "additional_data": "credits"
-        },
-        {
-            "start_date": "2022-10-14 00:00:00",
-            "expiration_date": "",
-            "title": "Redeem Credits for Cool Merch",
-            "message": "Trade in your credits and shop for cool products in the merch shop.",
-            "priority": 4,
-            "user_levels": [
-                "developer",
-                "premium",
-                "legacy",
-                "free"
-            ],
-            "application": [
-                "congress_watcher"
-            ],
-            "market": [
-                "usa"
-            ],
-            "url": "",
-            "icon": "store",
-            "support_option": false,
-            "loading_screen": true,
-            "local_notification": false,
-            "is_alert": false,
-            "additional_data": "shop"
-        },
-        {
-            "start_date": "2022-10-14 00:00:00",
-            "expiration_date": "",
-            "title": "Enjoying Congress Watcher App?",
-            "message": "Let us know how we're doing, and if there is something we can improve on. Tap here to give us a rating!",
-            "priority": 4,
-            "user_levels": [
-                "developer",
-                "premium",
-                "legacy",
-                "free"
-            ],
-            "market": [
-                "world"
-            ],
-            "url": "",
-            "icon": "star",
-            "support_option": true,
-            "loading_screen": true,
-            "local_notification": true,
-            "is_alert": false,
-            "additional_data": "rating"
-        },
-        {
-            "start_date": "2022-10-14 00:00:00",
-            "expiration_date": "2022-10-19 00:00:00",
-            "title": "Ready For Premium Status?",
-            "message": "Our Free Premium Days promotion runs the first week of every month where you can try out all app features!",
-            "priority": 5,
-            "user_levels": [
-                "developer",
-                "legacy",
-                "free"
-            ],
-            "application": [
-                "congress_watcher"
-            ],
-            "market": [
-                "world"
-            ],
-            "url": "",
-            "icon": "workspace-premium",
-            "support_option": false,
-            "loading_screen": true,
-            "local_notification": false,
-            "is_alert": false,
-            "additional_data": "upgrade"
-        },
-        {
-            "start_date": "2022-10-14 00:00:00",
-            "expiration_date": "",
-            "title": "Fine Tune App Notifications",
-            "message": "Adjust alerts and notifications from the [Settings] tile on the side menu!",
-            "priority": 6,
-            "user_levels": [
-                "developer",
-                "premium",
-                "legacy",
-                "free"
-            ],
-            "application": [
-                "congress_watcher"
-            ],
-            "market": [
-                "world"
-            ],
-            "url": "",
-            "icon": "notifications",
-            "support_option": false,
-            "loading_screen": true,
-            "local_notification": false,
-            "is_alert": false,
-            "additional_data": "notifications"
-        },
-        {
-            "start_date": "2022-10-26 00:00:00",
-            "expiration_date": "",
-            "title": "Developer Support Options",
-            "message": "Developer support options can be found on our humble website. Tap here to view!",
-            "priority": 9,
-            "user_levels": [
-                "developer",
-                "premium",
-                "legacy",
-                "free"
-            ],
-            "market": [
-                "world"
-            ],
-            "url": "https://mettacode.dev",
-            "icon": "volunteer-activism",
-            "support_option": true,
-            "loading_screen": true,
-            "local_notification": false,
-            "is_alert": false,
-            "additional_data": "support"
-        },
-        {
-            "start_date": "2022-10-27 00:00:00",
-            "expiration_date": "",
-            "title": "Hello World",
-            "message": "Since you ARE MettaCode. Just sending a test",
-            "priority": 10,
-            "user_levels": [
-                "developer"
-            ],
-            "market": [],
-            "url": "https://mettacode.dev",
-            "icon": "developer-board",
-            "support_option": false,
-            "loading_screen": true,
-            "local_notification": true,
-            "is_alert": false,
-            "additional_data": "test"
         }
     ]
 }
